<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/img_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
 <TextView
      android:id="@+id/tv_nomeProduto"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
     android:textSize="22dp"
      android:text="@string/tv_produto"
     app:layout_constraintTop_toBottomOf="@id/img_produto"
     app:layout_constraintStart_toStartOf="parent"
     />

    <TextView
        android:id="@+id/tv_nomePreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_preco"
        android:textSize="22dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/img_produto"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_descProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricao"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nomeProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>