<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProdutoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">


    <TextView
        android:id="@+id/tv_nomeProdutoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome Produto"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:id="@+id/qtdProdutoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_qtdProduto"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/produtoImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/img_produto"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/qtdProdutoTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$100,00"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/produtoImg"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/alugaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_alugar"
        android:textSize="22dp"
        android:textAllCaps="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/blue_dark"
        app:layout_constraintTop_toBottomOf="@id/produtoImg"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/descricaoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_descricao"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/alugaBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>